# compile_time_sql

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.travis/: run.sh
benchmark/: CMakeLists.txt  plot.py
benchmark/include/: database.hpp
benchmark/source/: main.cpp
examples/: CMakeLists.txt
examples/include/: database.hpp
examples/source/: main.cpp
include/: api.hpp  sqlite_factory.hpp
source/: main.cpp
tests/: CMakeLists.txt
tests/include/: basic_select.hpp  exceptionalized_static_assert.hpp  sample_database.hpp  test_delete_op.hpp  test_insert_parameter_assing.hpp  test_select.hpp  test_select_generated.hpp  test_where_parameter.hpp
tests/source/: main.cpp
